# openai-whisper-realtime

./: pyproject.toml
